[tool.poetry]
name = "python-ast"
version = "0.1.0"
description = ""
authors = ["Gerardo Gerónimo <gerardo@ubidots.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_ast"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
